migration to tycho 0.25.0
- enabled generation of feature
- enabled generation of update site