@@ -2,55 +2,13 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <profiles>
-    <profile>
-      <id>macosx</id>
-        <activation>
-          <os>
-            <name>mac os x</name>
-            <family>mac</family>
-          </os>
-        </activation>
-      <properties>
-      <ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs>
-      </properties>
-    </profile>
-  </profiles>
   <parent>
-    <artifactId>plugins</artifactId>
     <groupId>com.google.eclipse.mechanic</groupId>
+    <artifactId>plugins</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <groupId>com.google.eclipse.mechanic</groupId>
   <artifactId>com.google.eclipse.mechanic.tests</artifactId>
   <version>0.0.1</version>
   <packaging>eclipse-test-plugin</packaging>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>test</id>
-            <phase>test</phase>
-            <configuration>
-              <testClassesDirectory>${project.build.outputDirectory}</testClassesDirectory>
-            </configuration>
-            <goals>
-              <goal>test</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.7</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
 </project>
